Fix > Section > featured product | Buttons should be aligned (#137)
## QA Steps

-  [ ] `pnpm i`
-  [ ] `pnpm dev`

--- a/assets/main.css
+++ b/assets/main.css
@@ -385,3 +385,10 @@ input:not([type=radio]),
 .splide {
   direction: ltr;
 }
+
+/* ------------------- */
+/* ----- spacers ----- */
+/* ------------------- */
+.spacer {
+  flex-grow: 1;
+}
